src/Domain/Compiler/Tests/Expression/__Baselines__/CharacterLiteral_Start-StashIr.error
error: Expected single quote (') character.
--> main.hs:8:12
  | 
8 | return '\0';    }
  |            ^
